--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
     Welcome to {{ title }}!
   </h1>
 </div>
-<h2>Lister der Mitglieder: </h2>
+<h2>Liste der Anwender </h2>
 <wm-member-list></wm-member-list>
