--- a/src/app/member-list/member-list.component.html
+++ b/src/app/member-list/member-list.component.html
@@ -1,6 +1,9 @@
+<div class="ui middle aligned selection divided list">
 <div *ngFor="let member of members" class="item">
 	<div class="content">
             <div class="header">Name: {{member.name}}</div>
             <div class="description">E-Mail: {{member.email}}</div>
+            <div class="description">Group: {{member.group}}</div>
         </div>
+</div>
 </div>
