Erweiterungen in Bezzo

--- a/src/app/comment-list/comment-list.component.html
+++ b/src/app/comment-list/comment-list.component.html
@@ -1,3 +1,38 @@
-<p>
-  commment-list works!
-</p>
+
+<div *ngFor="let comment of comments" class="ui centered card">
+  <div class="content">
+    <div class="header">{{comment.memberRefId}}
+    <div>
+	{{comment.at}}
+      <span class="ui red tag label">aktueller Termin</span>
+    <div>
+    </div>
+    </div>
+
+  </div>
+
+  <div class="content">
+	  {{comment.text}}
+  </div>
+  <div class="content">
+    <span class="ui star rating" data-rating="3" data-max-rating="7"></span>
+    <span class="right floated" data-tooltip="Teilnehmen" data-position="top left">
+      <i class="heart outline like icon"></i>
+      <i class="thumbs down icon"></i>
+      <a><i class="green thumbs up icon"></i></a>
+       <i class="green thumbs up icon"></i>
+      <span data-content="Add users to your feed">
+       <i class="green thumbs up icon"></i>
+        </span>
+
+      17 likes
+    </span>
+        <i class="comment icon"></i>
+        5 comments
+        <i class="small green checkmark icon"></i><i class="small green checkmark icon"></i><i class="small green checkmark icon"></i><i class="small green checkmark icon"></i>
+    <i class="green check square outline icon"></i><i class="green check square outline icon"></i><i class="large green user circle outline icon"></i><i class="green check circle outline icon"></i><i class="grey question circle outline icon"></i>
+        <div class="ui star rating" data-rating="3" data-max-rating="7"></div>
+  </div>
+</div>
+
+
