--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -6,3 +5,5 @@
 </div>
 <h2>Liste der Anwender </h2>
 <wm-member-list></wm-member-list>
+<h2>Liste der Kommentare </h2>
+<wm-comment-list></wm-comment-list>
