member list and comment list fixed

--- a/src/app/member-list/member-list.component.html
+++ b/src/app/member-list/member-list.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="content">
     <div class="description">E-Mail: {{member.email}}</div>
-    <div class="description">Group: {{member.group}}</div>
+    <div class="description">Group: {{member.groupRefId}}</div>
   </div>
 
   <div class="content">
