added chat-list component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,7 @@
 </div>
 <h2>Liste der Anwender </h2>
 <wm-member-list></wm-member-list>
+<h2>Liste der Chats</h2>
+<wm-chat-list></wm-chat-list>
 <h2>Liste der Kommentare </h2>
 <wm-comment-list></wm-comment-list>
