--- a/src/app/comment-list/comment-list.component.html
+++ b/src/app/comment-list/comment-list.component.html
@@ -1,4 +1,5 @@
-
+<h2>Kommentare</h2>
+<h3>Thema: {{chatRefId}}</h3>
 <div *ngFor="let comment of comments" class="ui centered card">
   <div class="content">
     <div class="header">{{comment.memberRefId}}
