--- a/src/app/member-list/member-list.component.html
+++ b/src/app/member-list/member-list.component.html
@@ -1,8 +1,4 @@
-<!--div class="ui center aligned grid divided list"-->
-<!--div class="ui three column centered grid"-->
-<!-- div class="ui three column grid">
-  <div class="column"></div>
-  <div class="column"-->
+<h2>Mitglieder</h2>
 <div *ngFor="let member of members" class="ui centered card">
   <div class="content">
     <div class="header">{{member.name}}
