--- a/src/app/chat-list/chat-list.component.html
+++ b/src/app/chat-list/chat-list.component.html
@@ -1,17 +1,19 @@
 <h2>Themen</h2>
-<div *ngFor="let chat of chats" class="ui centered card" (click)="selectChat(chat.id)">
+<div *ngFor="let chat of chats" class="ui centered card" [routerLink]="['/comments', chat.id]">
+  <!--a routerLink="/comments/{{chat.id}}"> XXXX </a-->
   <div class="content">
-    <div class="header">Thema: {{chat.subject}}
-    </div>
+    <div class="header"><i class="comments outline middle aligned icon"></i> Thema: {{chat.subject}}</div>
   </div>
-  <a routerLink="/comments/{{chat.id}}">
-    <div class="content">
-      <div class="description">Letzter Kommentar: {{chat.lastCommentTime}}</div>
-      <div class="description">Group: {{chat.groupRefId}}</div>
-    </div>
-    <div *ngIf="chat.proposedDates" class="content">
-        <div class="description">Dates</div>
-      <div *ngFor="let d of chat.proposedDates" class="description">{{d}}</div>
-    </div>
-  </a>
+
+  <div class="content">
+    <div class="description">Letzter Kommentar: {{chat.lastCommentTime}}</div>
+    <div class="description">Group: {{chat.groupRefId}}</div>
+  </div>
+
+
+  <div *ngIf="chat.proposedDates" class="extra content">
+    <div class="description">Dates</div>
+    <div *ngFor="let d of chat.proposedDates" class="description">{{d}}</div>
+  </div>
+
 </div>
