added fixed main menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
+<div class="ui fixed inverted main menu">
+  <div class="ui container">
+    <a href="#" class="header item">WeMeet</a>
+    <a class="header item" routerLink="/chats">Themen</a>
+    <a class="header item" routerLink="/members">Mitglieder</a>
+  </div>
+</div>
+
+
+<!--
+
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -6,5 +17,10 @@
 <a routerLink="/chats">Themen</a>&nbsp;|&nbsp;
 <a routerLink="/members">Mitglieder</a>
 
+-->
+
+
 <router-outlet></router-outlet>
+
+
 
