use moment.js for dates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="ui fixed inverted main menu">
   <div class="ui container">
-    <a href="#" class="header item">WeMeet</a>
+    <div class="header item">{{now}}</div>
+    <a href="." class="header item">{{title}}</a>
     <a class="header item" routerLink="/chats">Themen</a>
     <a class="header item" routerLink="/members">Mitglieder</a>
   </div>
