--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,44 @@
+<div class="ui top attached inverted menu">
+  <a class="item">
+    <i class="sidebar icon"></i>
+    Menu
+  </a>
+  <div class="header item">{{now}}</div>
+    <a href="." class="header item">{{title}}</a>
+    <a class="header item" routerLink="/chats">Themen</a>
+    <a class="header item" routerLink="/members">Mitglieder</a>
+
+</div>
+
+
+
+<!--
+<div class="ui left vertical inverted labeled icon sidebar menu visible">
+    <a class="item">
+        <i class="home icon"></i>
+        Home
+      </a>
+      <a class="item">
+        <i class="block layout icon"></i>
+        Topics
+      </a>
+      <a class="item">
+        <i class="smile icon"></i>
+        Friends
+      </a>
+</div>
+-->
+
+<!--
 <div class="ui fixed inverted main menu">
   <div class="ui container">
     <div class="header item">{{now}}</div>
     <a href="." class="header item">{{title}}</a>
-    <a class="header item" routerLink="/chats">Themen</a>
+    <a class="header item" routerLink="/chats">Themenxx</a>
     <a class="header item" routerLink="/members">Mitglieder</a>
   </div>
 </div>
+-->
 
 
 <!--
@@ -20,8 +53,31 @@
 
 -->
 
+<div class="ui bottom attached segment pushable">
+    <!--div class="ui inverted labeled icon left inline vertical sidebar menu uncover visible" >
+      <a class="item">
+        <i class="home icon"></i>
+        Home
+      </a>
+      <a class="item">
+        <i class="block layout icon"></i>
+        Topics
+      </a>
+      <a class="item">
+        <i class="smile icon"></i>
+        Friends
+      </a>
+      <a class="item">
+        <i class="calendar icon"></i>
+        History
+      </a>
+    </div-->
 
-<router-outlet></router-outlet>
+  <div class="pusher">
 
+        <router-outlet></router-outlet>
+
+  </div>
+</div>
 
 
