introduced comment form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,8 @@
 
-<div class="ui sidebar vertical left inverted menu" >
-  <a href="#" class="item">punkt 1 </a>
-  <a href="#" class="item">punkt 2 </a>
-  <a href="#" class="item">punkt 3 </a>
-  <a href="#" class="item">punkt 4 </a>
-</div>
 
 
-<div class="ui top attached inverted menu">
-  <a id="toggle" class="item" (click)="toggleSidebar()">
+<div class="ui top fixed inverted menu">
+  <a id="toggle" class="header item" (click)="toggleSidebar()">
     <i class="sidebar icon "></i>
     Menu
   </a>
@@ -18,6 +12,10 @@
   <a class="header item" routerLink="/chats">Themen</a>
   <a class="header item" routerLink="/members">Mitglieder</a>
 
+</div>
+
+<div class="ui container" style="margin-top: 50px">
+  <router-outlet></router-outlet>
 </div>
 
 
@@ -64,8 +62,8 @@
 
 -->
 
-<div class="ui bottom attached segment pushable">
-  <!--div class="ui inverted labeled icon left inline vertical sidebar menu uncover visible" >
+<!--div class="ui bottom attached segment pushable">
+  <div class="ui inverted labeled icon left inline vertical sidebar menu uncover visible" >
       <a class="item">
         <i class="home icon"></i>
         Home
@@ -82,11 +80,13 @@
         <i class="calendar icon"></i>
         History
       </a>
-    </div-->
+    </div>
+
+
 
   <div class="pusher">
 
-    <router-outlet></router-outlet>
+<router-outlet></router-outlet>
 
   </div>
-</div>
+</div-->
