comment form with subject

--- a/src/app/comment-form/comment-form.component.html
+++ b/src/app/comment-form/comment-form.component.html
@@ -2,7 +2,7 @@
 
 <div class="ui fixed blue inverted secondary menu" style="margin-top: 40px">
   <div class="header fixed item">
-    Kommentar eingeben zu Thema: {{chatRefId}}
+    Kommentar eingeben zu Thema: {{chatSubject}}
   </div>
 </div>
 
