login and userhome added

--- a/src/app/userhome/userhome.component.html
+++ b/src/app/userhome/userhome.component.html
@@ -1,3 +1,10 @@
-<p>
-  userhome works!
-</p>
+<div class="ui container">
+  <div class="header">
+    <span>Travelling World</span>
+  </div>
+  <div class="boom">
+    <h1>Hello {{username}}</h1> <h2>you have successfully logged in using JWT.</h2>
+
+    <button class="ui blue button" (click)="logout()">Logout</button>
+  </div>
+</div>
