--- a/src/app/userhome/userhome.component.html
+++ b/src/app/userhome/userhome.component.html
@@ -1,6 +1,6 @@
 <div class="ui container">
   <div class="header">
-    <span>Travelling World</span>
+    <span>Account</span>
   </div>
   <div class="boom">
     <h1>Hello {{username}}</h1> <h2>you have successfully logged in using JWT.</h2>
