--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
 
     <a href="." class="header item">{{title}}</a>
 
-    <a class="header item left icon floated right" routerLink="/userhome">
+    <a class="header item icon floated right" routerLink="/userhome">
       <i class="user icon" style="padding-right: 10px"></i>
       <div *ngIf="!username">---</div>
       {{username}}
