--- a/src/app/comment-form/comment-form.component.html
+++ b/src/app/comment-form/comment-form.component.html
@@ -12,7 +12,6 @@
         <label for="comment">Kommentar</label>
         <input formControlName="comment" id="comment" placeholder="Dein Kommentar" type="text">
       </div>
-      <button class="ui blue button" (click)="addComment()">Submit</button>
+      <button class="ui blue button" (click)="addComment()">Absenden</button>
   </div>
 </form>
-
