Comment Input styled

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,14 @@
       <router-outlet></router-outlet>
     </div>
 
+
+      <div style="position: fixed;bottom:50px; left: 50%;transform: translateX(-50%);">
+      <router-outlet name="bottom"></router-outlet>
+      </div>
+
+
+
+
     <div class="ui bottom fixed inverted inverted menu">
       <div class="footer item floated right">
         {{now}}
