--- a/src/app/comment-form/comment-form.component.html
+++ b/src/app/comment-form/comment-form.component.html
@@ -1,12 +1,14 @@
 <form class="form" [formGroup]="_commentForm">
-
-  <div class="ui action input">
-    <textarea rows="1" cols="50" type="text" formControlName="comment" id="comment" placeholder="Kommentar schreiben zu '{{chatSubject}}'" >
-      </textarea>
-    <button class="ui teal icon button" (click)="addComment()">
-      <i class="arrow circle right icon"></i>
-    </button>
+  <div style="display:inline-flex;align-items:flex-end">
+    <div class="ui action input">
+      <textarea rows="1" cols="50" type="text" formControlName="comment" id="comment"
+        placeholder="Kommentar schreiben zu '{{chatSubject}}'" (keyup)="autoGrowTextArea($event.target)">
+  </textarea>
+    </div>
+    <div style="display:inline-block">
+      <button class="ui teal icon button" (click)="addComment()">
+        <i class="arrow circle right icon"></i>
+      </button>
+    </div>
   </div>
-
 </form>
-
