--- a/src/app/comment-list/comment-list.component.html
+++ b/src/app/comment-list/comment-list.component.html
@@ -28,6 +28,9 @@
     </div>
   </div>
 </div>
+<div style="position: fixed;bottom:50px; left: 50%;transform: translateX(-50%);">
+  <wm-comment-form></wm-comment-form>
+</div>
 <!--
 <div class="ui bottom fixed inverted blue menu" style="margin-bottom: 40px">
   <div class="content" style="margin: auto">
