--- a/src/app/comment-form/comment-form.component.html
+++ b/src/app/comment-form/comment-form.component.html
@@ -1,8 +1,8 @@
 <form class="form" [formGroup]="_commentForm">
   <div style="display:inline-flex;align-items:flex-end">
     <div class="ui action input">
-      <textarea rows="1" cols="30" type="text" formControlName="comment" id="comment"
-        placeholder="Kommentar schreiben zu '{{chatSubject}}'" (keyup)="autoGrowTextArea($event.target)">
+      <textarea rows="2" cols="30" type="text" formControlName="comment" id="comment"
+        placeholder="Kommentar schreiben zu '{{chatSubject}}'" (keyup)="autoGrow($event.target)" >
   </textarea>
     </div>
     <div style="display:inline-block">
